[gd_scene load_steps=15 format=3 uid="uid://b20y5gm1bofmk"]

[ext_resource type="PackedScene" uid="uid://r15gq461gr1r" path="res://src/resources/objects/Door.tscn" id="1_se0v6"]
[ext_resource type="Texture2D" uid="uid://br6o80pc8ohoa" path="res://textures/eye.png" id="2_lgne8"]
[ext_resource type="Script" path="res://src/resources/objects/Eye.gd" id="2_s1mce"]
[ext_resource type="Texture2D" uid="uid://de3tvw6qppleq" path="res://textures/dveremoment.png" id="4_ctd0g"]

[sub_resource type="BoxShape3D" id="BoxShape3D_g6jya"]
size = Vector3(2, 9, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_ayliw"]
size = Vector3(10, 10, 9)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pycja"]
albedo_texture = ExtResource("2_lgne8")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f1vl4"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
shading_mode = 0
albedo_texture = ExtResource("4_ctd0g")

[sub_resource type="ArrayMesh" id="ArrayMesh_16qj8"]
_surfaces = [{
"aabb": AABB(-0.25, -5, -4.5, 0.5, 10, 9),
"attribute_data": PackedByteArray(91, 107, 145, 191, 132, 144, 253, 64, 91, 107, 145, 191, 189, 183, 15, 65, 190, 247, 148, 191, 189, 183, 15, 65, 190, 247, 148, 191, 132, 144, 253, 64, 132, 16, 1, 193, 132, 144, 253, 64, 165, 148, 15, 193, 132, 144, 253, 64, 165, 148, 15, 193, 189, 183, 15, 65, 132, 16, 1, 193, 189, 183, 15, 65, 132, 16, 1, 193, 190, 247, 148, 191, 132, 16, 1, 193, 91, 107, 145, 191, 165, 148, 15, 193, 91, 107, 145, 191, 165, 148, 15, 193, 190, 247, 148, 191, 132, 16, 9, 65, 190, 247, 148, 191, 165, 148, 23, 65, 190, 247, 148, 191, 165, 148, 23, 65, 91, 107, 145, 191, 132, 16, 9, 65, 91, 107, 145, 191, 132, 16, 1, 193, 132, 144, 253, 64, 132, 16, 1, 193, 189, 183, 15, 65, 165, 148, 15, 193, 189, 183, 15, 65, 165, 148, 15, 193, 132, 144, 253, 64, 91, 107, 209, 63, 132, 144, 253, 64, 190, 247, 212, 63, 132, 144, 253, 64, 190, 247, 212, 63, 189, 183, 15, 65, 91, 107, 209, 63, 189, 183, 15, 65),
"format": 4119,
"index_count": 36,
"index_data": PackedByteArray(0, 0, 1, 0, 2, 0, 0, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 4, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 8, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 0, 12, 0, 14, 0, 15, 0, 16, 0, 17, 0, 18, 0, 16, 0, 18, 0, 19, 0, 20, 0, 21, 0, 22, 0, 20, 0, 22, 0, 23, 0),
"material": SubResource("StandardMaterial3D_f1vl4"),
"name": "dveremoment",
"primitive": 3,
"vertex_count": 24,
"vertex_data": PackedByteArray(0, 0, 128, 190, 0, 0, 160, 64, 0, 0, 144, 192, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 128, 190, 0, 0, 160, 192, 0, 0, 144, 192, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 128, 62, 0, 0, 160, 192, 0, 0, 144, 192, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 128, 62, 0, 0, 160, 64, 0, 0, 144, 192, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 128, 190, 0, 0, 160, 64, 0, 0, 144, 192, 0, 0, 255, 127, 255, 255, 0, 0, 0, 0, 128, 190, 0, 0, 160, 64, 0, 0, 144, 64, 0, 0, 255, 127, 255, 255, 0, 0, 0, 0, 128, 190, 0, 0, 160, 192, 0, 0, 144, 64, 0, 0, 255, 127, 255, 255, 0, 0, 0, 0, 128, 190, 0, 0, 160, 192, 0, 0, 144, 192, 0, 0, 255, 127, 255, 255, 0, 0, 0, 0, 128, 62, 0, 0, 160, 192, 0, 0, 144, 192, 255, 127, 0, 0, 255, 255, 255, 255, 0, 0, 128, 190, 0, 0, 160, 192, 0, 0, 144, 192, 255, 127, 0, 0, 255, 255, 255, 255, 0, 0, 128, 190, 0, 0, 160, 192, 0, 0, 144, 64, 255, 127, 0, 0, 255, 255, 255, 255, 0, 0, 128, 62, 0, 0, 160, 192, 0, 0, 144, 64, 255, 127, 0, 0, 255, 255, 255, 255, 0, 0, 128, 62, 0, 0, 160, 64, 0, 0, 144, 192, 255, 127, 255, 255, 255, 127, 255, 191, 0, 0, 128, 62, 0, 0, 160, 64, 0, 0, 144, 64, 255, 127, 255, 255, 255, 127, 255, 191, 0, 0, 128, 190, 0, 0, 160, 64, 0, 0, 144, 64, 255, 127, 255, 255, 255, 127, 255, 191, 0, 0, 128, 190, 0, 0, 160, 64, 0, 0, 144, 192, 255, 127, 255, 255, 255, 127, 255, 191, 0, 0, 128, 62, 0, 0, 160, 64, 0, 0, 144, 192, 255, 255, 255, 127, 255, 255, 255, 255, 0, 0, 128, 62, 0, 0, 160, 192, 0, 0, 144, 192, 255, 255, 255, 127, 255, 255, 255, 255, 0, 0, 128, 62, 0, 0, 160, 192, 0, 0, 144, 64, 255, 255, 255, 127, 255, 255, 255, 255, 0, 0, 128, 62, 0, 0, 160, 64, 0, 0, 144, 64, 255, 255, 255, 127, 255, 255, 255, 255, 0, 0, 128, 190, 0, 0, 160, 64, 0, 0, 144, 64, 255, 127, 255, 127, 255, 255, 255, 191, 0, 0, 128, 62, 0, 0, 160, 64, 0, 0, 144, 64, 255, 127, 255, 127, 255, 255, 255, 191, 0, 0, 128, 62, 0, 0, 160, 192, 0, 0, 144, 64, 255, 127, 255, 127, 255, 255, 255, 191, 0, 0, 128, 190, 0, 0, 160, 192, 0, 0, 144, 64, 255, 127, 255, 127, 255, 255, 255, 191)
}]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8nqak"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="PrismMesh" id="PrismMesh_7swqd"]
material = SubResource("StandardMaterial3D_8nqak")
size = Vector3(2.785, 0.535, 0.575)

[sub_resource type="Animation" id="Animation_2nded"]
resource_name = "RESET"
length = 0.01
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D2")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 2, -0.185)
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "scale_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D2")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 1, 1, 1)
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeshInstance3D2:transparency")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_a8bvo"]
resource_name = "close"
length = 5.0
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D2")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 1.4, -0.185, 4.5, 1, 0, 1.4, -0.185, 4.7, 1, 0, 0.5, -0.185)
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "scale_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D2")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 0.73, 0.675, 1, 4.5, 1, 0.73, 0.675, 1, 4.7, 1, 1.5, 4, 1)
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeshInstance3D2:transparency")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 4.7, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gcnqw"]
_data = {
"RESET": SubResource("Animation_2nded"),
"close": SubResource("Animation_a8bvo")
}

[node name="Eye" instance=ExtResource("1_se0v6")]
script = ExtResource("2_s1mce")
wait_time = 5.0

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.49601, -1, 0)
aabb = AABB(-0.25, -4, -4.5, 3, 10, 9)

[node name="BeforeEyeTrigger" type="Area3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.35, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="BeforeEyeTrigger" index="0"]
shape = SubResource("BoxShape3D_g6jya")

[node name="PassedThroughTrigger" type="Area3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="PassedThroughTrigger" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0)
shape = SubResource("BoxShape3D_ayliw")

[node name="MeshInstance3D" parent="StaticBody3D" index="0"]
material_override = SubResource("StandardMaterial3D_pycja")
mesh = SubResource("ArrayMesh_16qj8")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="StaticBody3D" index="3"]
transform = Transform3D(0.00157078, 0, 0.999999, 0, 1, 0, -0.999999, 0, 0.00157078, 0, 2, -0.185)
visible = false
mesh = SubResource("PrismMesh_7swqd")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="StaticBody3D" index="4"]
libraries = {
"": SubResource("AnimationLibrary_gcnqw")
}

[connection signal="screen_entered" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_exited"]
[connection signal="body_entered" from="BeforeEyeTrigger" to="." method="_on_before_eye_trigger_body_entered"]
[connection signal="body_entered" from="PassedThroughTrigger" to="." method="_on_area_3d_body_entered"]
